# fbx-parser

./: CMakeLists.txt  fbx.cpp  fbx.hpp  makefile
examples/: example1.cpp  example2.cpp  example3.cpp  fbx-simplemesh.cpp
models/: monkey.fbx  texturePlane.fbx
